# mockall-mock-external-fn-in-integration-test

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: mywidget_handle_event.rs
